--- a/public/css/input.css
+++ b/public/css/input.css
@@ -37,6 +37,17 @@
 .btn-ghost-dt { @apply min-w-10 h-10 inline-flex justify-center items-center text-gray-800 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 py-2.5 text-sm rounded-full disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:focus:bg-gray-700 dark:hover:bg-gray-700; }
 .input-search-dt { @apply py-2 px-3 ps-9 block w-full border-gray-200 shadow-sm rounded-lg text-sm focus:z-10 focus:border-cyan-500 focus:ring-cyan-500 dark:bg-gray-700 dark:border-gray-600 dark:text-gray-300 dark:placeholder-gray-500 dark:focus:ring-gray-600; }
 
+.alert-success-preline { @apply bg-teal-100 border border-teal-200 text-sm text-teal-800 rounded-lg p-4 dark:bg-teal-800/10 dark:border-teal-900 dark:text-teal-500; }
+.alert-icon-success-preline { @apply inline-flex justify-center items-center size-8 rounded-full border-4 border-teal-100 bg-teal-200 text-teal-800 dark:border-teal-900 dark:bg-teal-800 dark:text-teal-500; }
+.alert-svg-success-preline { @apply shrink-0 size-4; }
+.alert-title-preline { @apply text-gray-800 font-semibold dark:text-white; }
+.alert-text-preline { @apply mt-2 text-sm text-gray-700 dark:text-gray-400; }
+.alert-close-wrapper-preline { @apply ps-3 ms-auto; }
+.alert-close-button-preline { @apply inline-flex bg-teal-50 rounded-lg p-1.5 text-teal-500 hover:bg-teal-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-teal-50 focus:ring-teal-600 dark:bg-transparent dark:hover:bg-teal-800/50 dark:text-teal-600; }
+.alert-close-icon-preline { @apply shrink-0 size-4; }
+.alert-danger-preline { @apply bg-red-100 border border-red-200 text-sm text-red-800 rounded-lg p-4 dark:bg-red-800/10 dark:border-red-900 dark:text-red-500; }
+.alert-icon-danger-preline { @apply inline-flex justify-center items-center size-8 rounded-full border-4 border-red-100 bg-red-200 text-red-800 dark:border-red-900 dark:bg-red-800 dark:text-red-500; }
+.alert-svg-danger-preline { @apply shrink-0 size-4; }
 
 /* States */
 @custom-variant hs-success {
